# image23d

./: .gitignore  .gitmodules  DESKTOP_APP_GUIDE.md  FINAL_IMAGE_CONDITIONING_FIX.md  FIXES_SUMMARY.md  IMAGE_CONDITIONING_DIAGNOSTICS.md  IMAGE_CONDITIONING_FIX.md  LAUNCH_INSTRUCTIONS.md  PROMPT_CONDITIONING_FIX.md  README_NEURALFORGE.md  UI_RESTRUCTURE_COMPLETE.md  desktop_functional.py  desktop_simple.py  dev.py  docker-compose.yml  download_insightface_models.py  download_tips.md  fix_face_swapper_models.py  install_ffmpeg.bat  install_ffmpeg.py  install_ffmpeg_windows.py  main.py  main_headless.py  neuralforge.desktop  neuralforge.py  neuralforge.sh  overrides.txt  pyproject.toml  pytest.ini  run_enhanced.py  run_tests.sh  setup_cuda.sh  test_actual_functions.py  test_complete_fix.py  test_config_fix.py  test_config_simple.py  test_delete_fix.py  test_facefusion_ffmpeg_fix.py  test_facefusion_models.py  test_final_validation.py  (+9 more)
.claude/: settings.local.json
backend/: .env.example  __init__.py  main.py  requirements.txt
backend/api/: auth.py  generation.py  models.py  queue.py  websocket.py
backend/api/middleware/: __init__.py  auth.py  rate_limit.py
backend/api/v1/: info.py  jobs.py  main.py  models.py  upload.py  user.py  webhooks.py
backend/models/: __init__.py  generation.py
backend/services/: __init__.py  credit_service.py  history_service.py  job_service.py  model_service.py  queue_service.py  simple_credit_service.py  simple_model_service.py  simple_queue_service.py  storage_service.py
core/: __init__.py  config.py
core/models/: __init__.py  enhancement.py  generation.py  queue.py
core/processors/: __init__.py  hi3dgen_processor.py  hi3dgen_utils.py  image_processor.py  image_processor_fixed.py  prompt_enhancer.py  sparc3d_processor.py  sparc3d_utils.py  threed_processor.py  threed_processor_fixed.py  video_processor.py
core/processors/threed/: __init__.py  depth_processing.py  export.py  image_processing.py  mesh_reconstruction.py  normal_processing.py  processor.py  texture_generation.py  validation.py
core/services/: __init__.py  gpu_orchestrator.py  model_manager.py  queue_manager.py  runpod_handler.py  serverless_gpu.py
deployment/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.runpod  deploy.sh  docker-compose.yml  nginx.conf  requirements-runpod.txt
desktop/: README.md  __init__.py  main.py  main_native.py  requirements.txt
desktop/core/: __init__.py  config.py  services.py
desktop/localization/: __init__.py  translator.py
desktop/localization/translations/: ar.json  en.json
desktop/ui/: __init__.py  theme.py
desktop/ui/components/: __init__.py  enhancement_panel.py  enhancement_panel_fixed.py  enhancement_panel_fullwidth.py  navigation.py  progress_pipeline.py  progress_pipeline_card.py  progress_pipeline_fixed.py  progress_pipeline_fullwidth.py  progress_pipeline_simple.py  runpod_settings.py
desktop/ui/pages/: __init__.py  create.py  create_better.py  create_fixed.py  lab.py  lab_batch_processor.py  library.py  models.py  settings.py
desktop/ui/styles/: rtl.css
desktop/ui/utils/: time_estimation.py
docs/: ADVANCED_FEATURES_IMPLEMENTATION.md  ENHANCED_FEATURES.md  GGUF_IMPLEMENTATION.md  VIDEO_GENERATION.md  flux_implementation_notes.md
docs/private/: TESTING.md
examples/: video_generation_example.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  generation.ts
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Billing.tsx  Create.tsx  Library.tsx  Login.tsx  Models.tsx  Register.tsx  Settings.tsx
frontend/src/store/: authStore.ts
scripts/: clear_gpu_memory.py  diagnose_gpu_memory.py
src/: app_styles.css  app_styles_minimal.css
src/hunyuan3d_app/: _3d_conversion.py  __init__.py  app.py  app_enhanced.py  character_consistency.py  config.py  credential_manager.py  explore_model.py  face_swap.py  gguf_manager.py  gpu_optimizer.py  gradio_fix.py  history_manager.py  hunyuan3d_studio.py  hunyuan3d_studio_enhanced.py  image_generation.py  lora_manager.py  memory_manager.py  model_comparison.py  model_manager.py  performance_monitor.py  queue_manager.py  system_checker.py  torchvision_patch.py  ui.py  ui_character_tab.py  ui_enhanced.py  ui_faceswap_tab.py  ui_modern.py  ui_progress_component.py  ui_video_tab.py  utils.py  video_generation.py  websocket_server.py
src/hunyuan3d_app/config/: __init__.py  constants.py  lazy_loader.py  model_definitions.py  models.py  optimization.py  paths.py
src/hunyuan3d_app/core/: __init__.py  studio.py  studio_enhanced.py
src/hunyuan3d_app/exceptions/: __init__.py  generation.py  models.py  validation.py
src/hunyuan3d_app/features/: __init__.py
src/hunyuan3d_app/generation/: __init__.py  image.py  threed.py  video.py
src/hunyuan3d_app/models/: __init__.py  base.py  comparison.py  dependencies.py  download.py  flux_acceleration.py  flux_controlnet.py  flux_core.py  flux_diagnostics.py  flux_enhance.py  flux_guidance.py  flux_optimization.py  flux_production.py  flux_prompts.py  gguf.py  gguf_wrapper.py  hunyuan3d_wrapper.py  loading.py  manager.py  utils.py
src/hunyuan3d_app/services/: __init__.py  civitai.py  credentials.py  history.py  queue.py  websocket.py
src/hunyuan3d_app/types/: __init__.py  generation.py  models.py  ui.py
src/hunyuan3d_app/ui/: __init__.py  enhanced.py  main.py  modern.py
src/hunyuan3d_app/utils/: __init__.py  auth.py  file_operations.py  formatting.py  fs_cache.py  gpu.py  gradio_fixes.py  image_utils.py  memory.py  memory_optimization.py  mmap_loader.py  performance.py  performance_monitor.py  validation.py
tests/: README.md  __init__.py  conftest.py  conftest_enhanced.py  mock_dependencies.py  utils.py
tests/frontend/: __init__.py
tests/frontend/unit/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/real_imports/: __init__.py  conftest.py  pytest.ini
tests/utils/: fixtures.py
tests/web/e2e/: generation-workflow.cy.ts
(+124 files in other folders)
