[project]
name = "hunyuan3d-app"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core
    "gradio>=4.0.0",
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",

    # ML/AI
    "transformers>=4.35.0",
    "diffusers>=0.24.0",  # Updated for better model support
    "accelerate>=0.24.0",
    "huggingface-hub>=0.19.0",
    "safetensors>=0.4.0",
    "sentencepiece",

    # 3D Processing
    "trimesh>=4.0.0",
    "pymeshlab",
    "open3d>=0.17.0",
    "scikit-image>=0.21.0",
    "point-cloud-utils>=0.29.0",

    # Image Processing
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "rembg>=2.0.50",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",

    # Utils
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.14.0",
    "psutil>=5.9.0",  # Added for system monitoring
    "pywin32>=228; platform_system == 'Windows'",  # For Windows-specific functionality
    "pynvml>=11.5.0",  # For NVIDIA GPU detection
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

# Different CUDA versions for xformers
cuda118 = [
    "xformers>=0.0.22; sys_platform == 'linux' or sys_platform == 'win32'",
]

cuda121 = [
    "xformers>=0.0.23; sys_platform == 'linux' or sys_platform == 'win32'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hunyuan3d_app"]

[tool.uv]
# Use pip's index strategy for finding compatible wheels
index-strategy = "first-index"

# Override dependencies that might have conflicts
override-dependencies = [
    "numba>=0.57.0",
    "llvmlite>=0.40.0",
    "rembg>=2.0.57",
]

# Extra index URLs for PyTorch and xformers
# Uncomment the appropriate one based on your CUDA version
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = 10

# [[tool.uv.index]]
# name = "pytorch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# priority = 10
